--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <h3 id="typelevel-transformations">Typelevel Transformations</h3>
 
-<p>Alphabet Soup is a library that will generate mappings between data-structures for you, automatically.</p>
+<p>Alphabet Soup is a boilerplate-reduction library that will generate mappings between data-structures for you, automatically.</p>
 
 <p>The order of types in a tuple or case class should not matter, just the type itself, if all the types are unique:</p>
 
